@@ -286,10 +286,10 @@ special test script, whatever.)</li>
 <li>formfile &lt;formspec&gt; &lt;fieldspec&gt; &lt;filename&gt;</li>
 <li>twill-sh -i as in python -i (DONE)</li>
 <li>twill-sh silence (DONE)</li>
-<li>submit on forms w/o submit button? (helgon...)</li>
+<li>submit on forms w/o submit button? (helgon...) (DONE)</li>
 <li>execute directories/directory trees?</li>
 <li>switch between executing all files &amp; stopping on first error. (DONE)</li>
-<li>&quot;fv 1 n value&quot; doesn't work, n ==&gt; number does.  ??</li>
+<li>&quot;fv 1 n value&quot; doesn't work, n ==&gt; number does.  (FIXED)</li>
 <li>HTTP basic auth</li>
 <li>command-line option for initial URL. (DONE)</li>
 </ol>
