@@ -217,17 +217,20 @@ class _TwillBrowserState:
         """
         found = None
         
+        matches = [ ctl for ctl in form.controls \
+                    if str(ctl.name) == fieldname ]
+
+        if matches and len(matches) == 1:
+            found = matches[0]
+
         regexp = re.compile(fieldname)
 
         matches = [ ctl for ctl in form.controls \
                     if regexp.search(str(ctl.name)) ]
-
-        if matches:
-            if len(matches) == 1:
-                found = matches[0]
-            else:
-                found = None
-
+        
+        if matches and len(matches) == 1:
+            found = matches[0]
+                
         if found is None:
             # try num
             clickies = [c for c in form.controls if c.is_of_kind('clickable')]
@@ -271,6 +274,8 @@ class _TwillBrowserState:
         if not self._browser._forms:
             raise Exception("no forms on this page!")
         
+        ctl = None
+        
         form = self._browser.form
         if form is None:
             if len(self._browser._forms) == 1:
@@ -287,20 +292,27 @@ class _TwillBrowserState:
                 submits = [ c for c in form.controls \
                             if isinstance(c, ClientForm.SubmitControl) ]
                     
-                if not len(submits):
-                    raise Exception('no submission buttons!')
-                
-                ctl = submits[0]
+                if len(submits):
+                    ctl = submits[0]
                 
         else:
             # fieldname given; find it.
             ctl = self.get_form_field(self._browser.form, fieldname)
 
-        print 'Note: submit is using submit button: name="%s", value="%s"' % \
-              (ctl.name, ctl.value)
+        #
+        # now set up the submission:
+        #
         
-        # got the submit control, now go there.
-        control = ctl._click(self._browser.form, True, urllib2.Request)
+        if ctl:
+            # submit w/button
+            print 'Note: submit is using submit button: name="%s", value="%s"' % \
+                  (ctl.name, ctl.value)
+            control = ctl._click(self._browser.form, True, urllib2.Request)
+        else:
+            # submit w/o submit button.
+            control = form._click(None, None, None, 0, None, urllib2.Request)
+
+        # now actually GO.
         self._last_result = journey(self._browser.open, control)
 
     def save_cookies(self, filename):
@@ -499,7 +511,7 @@ def formvalue(formname, fieldname, value):
 
         set_form_control_value(control, value)
     else:
-        print 'NO SUCH FIELD FOUND'
+        print 'NO SUCH FIELD FOUND / MULTIPLE MATCHES TO NAME'
         # @CTB
 
 fv = formvalue
